infra/k8s/apps/overlays/azure/products/products-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: products
  namespace: NAMESPACE_PLACEHOLDER
spec:
  hosts:
  - "*"
  gateways:
  - aks-istio-ingress/store-ui-gateway
  http:
  - match:
    - uri:
        prefix: /api/products
    rewrite:
      uri: /
    route:
    - destination:
        host: products-service.NAMESPACE_PLACEHOLDER.svc.cluster.local
        port:
          number: 5000
